--- a/index.html
+++ b/index.html
@@ -13,6 +13,107 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Header part start -->
+
+    <!-- Header part end -->
+    <section class="top_playerBlog content_center">
+        <div class="top_playerBlog_content bg-white">
+            <div class="top-player">
+                <h2>top player</h2>
+                <div class="player">
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-1.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">john smith</h4>
+                        </div>
+                    </div>
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-2.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">pro rasel</h4>
+                        </div>
+                    </div>
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-3.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">abu karim</h4>
+                        </div>
+                    </div>
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-4.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">shajedul karim</h4>
+                        </div>
+                    </div>
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-5.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">marvuf ahamed</h4>
+                        </div>
+                    </div>
+                    <div class="player-member">
+                        <div class="player-img">
+                            <img src="img/players/player-6.png" alt="">
+                        </div>
+                        <div class="player-text">
+                            <h4 class="player-name">mujahid</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="top-blog">
+                <h2>top blog</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="blogThumbnail-img">
+                            <img src="img/blogs/blog-1.png" alt="Ice-cream">
+                        </div>
+                        <div class="blogContent-info">
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blogThumbnail-img">
+                            <img src="img/blogs/blog-2.png" alt="Ice-cream">
+                        </div>
+                        <div class="blogContent-info">
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blogThumbnail-img">
+                            <img src="img/blogs/blog-3.png" alt="Ice-cream">
+                        </div>
+                        <div class="blogContent-info">
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="blogThumbnail-img">
+                            <img src="img/blogs/blog-4.png" alt="Ice-cream">
+                        </div>
+                        <div class="blogContent-info">
+                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
+                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
