--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Leader Board -Landing Page Design</title>
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <!-- Font awesome link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- Css link -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -16,6 +18,8 @@
     <!-- Header part start -->
 
     <!-- Header part end -->
+
+    <!-- Blog part start -->
     <section class="top_playerBlog content_center">
         <div class="top_playerBlog_content bg-white">
             <div class="top-player">
@@ -89,8 +93,8 @@
                             <img src="img/blogs/blog-2.png" alt="Ice-cream">
                         </div>
                         <div class="blogContent-info">
-                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
-                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                            <h3 class="blog-title"> UI cheat sheet: <br> list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -98,8 +102,8 @@
                             <img src="img/blogs/blog-3.png" alt="Ice-cream">
                         </div>
                         <div class="blogContent-info">
-                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
-                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                            <h3 class="blog-title">7 typography tips<br> for interface design</h3>
+                            <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
                         </div>
                     </article>
                     <article class="blog">
@@ -107,13 +111,94 @@
                             <img src="img/blogs/blog-4.png" alt="Ice-cream">
                         </div>
                         <div class="blogContent-info">
-                            <h3 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h3>
-                            <p class="blog-author">By <a href="#">Danny Sapio</a></p>
+                            <h3 class="blog-title">Your logo is <br> copied</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
                         </div>
                     </article>
+                </div> <!-- Blogs -->
+            </div> <!-- top-blog -->
+        </div> <!-- top_playerBlog_content -->
+    </section>
+    <!-- Blog part end -->
+
+    <!-- Latest Courses start -->
+    <section class="latest_courses content_center">
+        <div class="latestCourses_content bg-white">
+            <h2>latest Courses</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="img/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">React - The Complete <br> Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-ratting">
+                            <div class="course-review">
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconEmpty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="img/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">React - The Complete <br> Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-ratting">
+                            <div class="course-review">
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconEmpty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="img/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="course-title">React - The Complete <br> Guide 2022</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                        <div class="course-ratting">
+                            <div class="course-review">
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconFilled"></i>
+                                <i class="fas fa-star iconEmpty"></i>
+                                <span>4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <i class="far fa-clock"></i>
+                                01:30hr
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Latest Courses end -->
+
 </body>
 </html>
