Header part create

--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
 </head>
 <body>
     <!-- Header part start -->
-
+    <header class="menu-area">
+        <div class="menu-content">
+            <div class="logo">
+                <img src="img/icons/logo.png" alt="Logo">
+                <span>Idea</span>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">works</a></li>
+                </ul>
+                <img src="img/icons/profile.png" alt="">
+            </div>
+        </div>
+    </header>
     <!-- Header part end -->
 
     <!-- Blog part start -->
@@ -154,8 +169,8 @@
                         <img src="img/courses/course-2.png" alt="">
                     </div>
                     <div class="course-info">
-                        <h3 class="course-title">React - The Complete <br> Guide 2022</h3>
-                        <p class="course-author">Reed Krakoff.</p>
+                        <h3 class="course-title">Powerpoint 2020  <br> Master Powerpoint Cour</h3>
+                        <p class="course-author">Walter Scott</p>
                         <div class="course-ratting">
                             <div class="course-review">
                                 <i class="fas fa-star iconFilled"></i>
@@ -163,11 +178,11 @@
                                 <i class="fas fa-star iconFilled"></i>
                                 <i class="fas fa-star iconFilled"></i>
                                 <i class="fas fa-star iconEmpty"></i>
-                                <span>4.5</span>
+                                <span>4.3</span>
                             </div>
                             <div class="course-duration">
                                 <i class="far fa-clock"></i>
-                                01:30hr
+                                01:20hr
                             </div>
                         </div>
                     </div>
@@ -177,7 +192,7 @@
                         <img src="img/courses/course-3.png" alt="">
                     </div>
                     <div class="course-info">
-                        <h3 class="course-title">React - The Complete <br> Guide 2022</h3>
+                        <h3 class="course-title">The Complete JavaScript <br> Coursevvvt 2020</h3>
                         <p class="course-author">Reed Krakoff.</p>
                         <div class="course-ratting">
                             <div class="course-review">
@@ -199,6 +214,6 @@
         </div>
     </section>
     <!-- Latest Courses end -->
-
+    
 </body>
 </html>
